--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,29 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/assets/images/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    <meta name="theme-color" content="#000000" />
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <!--GOOGLE FONST LINKS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <!--GOOGLE FONST LINKS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anta&family=Bangers&family=Lilita+One&family=Lobster&family=Paytone+One&family=Righteous&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,7 +45,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Atpūtas Vieta | Garkalni</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
